--- a/packages/markstream-svelte/src/index.css
+++ b/packages/markstream-svelte/src/index.css
@@ -280,12 +280,16 @@ markstream-svelte {
 }
 
 .markstream-svelte .typewriter-cursor {
+  position: absolute;
+  left: 0;
+  top: 0;
   display: inline-block;
   width: 0.55em;
   height: 1em;
   margin-left: 0.08em;
   vertical-align: -0.12em;
   border-right: 2px solid currentColor;
+  pointer-events: none;
   animation: typewriter-cursor-blink 1s steps(1, end) infinite;
 }
 
